tests/NormalTests/paczka1/fuzzy1/70096202.err
Error in line 3: D01nFa A978 42,7
Error in line 4: 3gQ0 S833 18,1
Error in line 23: D01nFa S833 34,0
Error in line 28: D01nFa A654 21,0
